Fix links that jump around and can't be clicked

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,7 +7,7 @@ header{
     float: none;
     position: static;
 }
-
+a:hover{text-decoration: underline}
 section {
     width: 100%;
     float: none;
